[project]
name = "fleetmind-rag"
version = "0.1.0"
description = "Agentic retrieval-augmented copilot for intelligent fleet operations with feedback-driven policy optimization."
readme = "README.md"
authors = [
    { name = "Mazyar Taghavi", email = "mazyartaghavi@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "pydantic-settings>=2.14.2",
]

[project.scripts]
fleetmind-rag = "fleetmind_rag:main"

[build-system]
requires = ["uv_build>=0.11.28,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=2.2.0",
    "pre-commit>=4.6.0",
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.21",
]

[tool.ruff]
target-version = "py312"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.mypy]
python_version = "3.12"
strict = true
warn_unreachable = true
show_error_codes = true
pretty = true
mypy_path = "src"

[tool.pytest.ini_options]
minversion = "9.0"
addopts = "-ra --strict-config --strict-markers --import-mode=importlib"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["fleetmind_rag"]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 80
